<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="chockyee.selfiethief.SettingsActivity" >

    <RelativeLayout
        android:id="@+id/switchlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_toLeftOf="@+id/switch1"
            android:text="@string/active"
            android:textColor="#000000"
            android:textStyle="italic" />

        <Switch
            android:id="@+id/sw_activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:textSize="20dp"
            android:textStyle="italic" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/settingtable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/switchlayout"
        android:orientation="vertical"
        android:stretchColumns="1" >

        <TableRow android:layout_width="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/name"
                android:textColor="#000000"
                android:textStyle="italic" >
            </TextView>

            <EditText
                android:id="@+id/txt_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/yourname"
                android:inputType="textEmailAddress"
                android:scrollHorizontally="true" 
                 android:textStyle="italic"/>
        </TableRow>

        <TableRow android:layout_width="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/attempt"
                android:textColor="#000000"
                android:textStyle="italic" >
            </TextView>

            <chockyee.secretcatcher.custom.HorizontalPicker
                android:id="@+id/hppwdfailer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="10dp"
                android:layout_weight="3"
                android:ems="10"
                android:minWidth="10dp" />
        </TableRow>

        <TableRow android:layout_width="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/mailid"
                android:textColor="#000000"
                android:textStyle="italic" >
            </TextView>

            <EditText
                android:id="@+id/txt_EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:focusable="false"
                 android:textStyle="italic"
                android:focusableInTouchMode="false"
                android:hint="@string/yourmailid"
                android:inputType="textEmailAddress"
                android:scrollHorizontally="true" />
        </TableRow>

        <TableRow android:layout_width="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/mobileno"
                android:textColor="#000000"
                android:textStyle="italic" >
            </TextView>

            <EditText
                android:id="@+id/txt_MobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:editable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/yourmobileno"
                android:inputType="textEmailAddress"
                android:scrollHorizontally="true"
                android:textStyle="italic" />
        </TableRow>

        <TableRow>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Save"
            android:textColor="#000000"
            android:textStyle="italic" />
    </LinearLayout>

</RelativeLayout>